--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
           color: white;
         }
         h1, h2, h3, p {
-          text-shadow: 2px 2px 2px rgba(255, 165, 0);
+          text-shadow: 2px 2px 1px rgba(255, 255, 255);
         }
         body {
           margin: 0;
-          padding: 2em;
+          padding: 1em;
         }
       </style>
-    <title>Trolled!</title>
+    <title>Location</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <h1>Some of your Information</h1>
     <hr>
-    <h2>Some info about you:</h2>
+    <h2>This is just a test to see my skills in coding</h2>
     <p><strong>IP Address:</strong> <span id="ip_address"></span></p>
     <p><strong>Country Name:</strong> <span id="country_name"></span></p>
     <p><strong>State name:</strong> <span id="region_name"></span></p>
